Add github  verification

--- a/.env
+++ b/.env
@@ -3,4 +3,10 @@ google_secret=ic0uvgeD7Elv0OQmSx-m3N3m
 
 facebook_id=930022434097663
 facebook_secret=bb2c807f31cd6b93e259d7298fef02e0
-facebook_callback=https://0d4f3ad4.ngrok.io/users/auth/facebook/callback
+facebook_callback=http://localhost:3000/users/auth/facebook/callback
+
+linkedin_id=78z9en6twxze4r
+linkedin_secret=UkdiCOs4y02XNBWz
+
+github_id=Iv1.d9072952bcda87eb
+github_secret=c51b8afa1bd371c09c7df18c82f090c622d0607e
