Add Twitter oauth

--- a/.env
+++ b/.env
@@ -10,3 +10,6 @@ linkedin_secret=UkdiCOs4y02XNBWz
 
 github_id=Iv1.d9072952bcda87eb
 github_secret=c51b8afa1bd371c09c7df18c82f090c622d0607e
+
+twitter_id=fdVqQoRjPaxuXlqJD6Flq7JO4
+twitter_secret=gUunJghHzsgV8bxs4Ruzjje2Ax4dVCOsVMCLjZVYGyvCT4a5PL
